# jmosc-wrapper

./: .gitignore  CMakeLists.txt
helpers/: cify_mosc.py  cify_source_mosc.py
src/: ensure.msc  ensure.msc.inc  java_mosc.c  java_mosc.h  jwrapper.msc  jwrapper.msc.inc  native_library.h
test/: main.c
